# deep_triangularization

./: .gitignore  Dockerfile  README.md  pyproject.toml
deep_triangularization/: layers.py  layers_multiheads.py  models.py
scripts/: analysis_model.py  compare_2D_conv.py  compare_linear.py  test_windows_attention.py  train.py  train_dense.py  train_headlinear.py  train_triangle.py  utils.py  visualize.py
tests/: test_layers.py  test_layersmultiheads.py
